--- a/V2/assets/css/shared.css
+++ b/V2/assets/css/shared.css
@@ -94,7 +94,7 @@ nav .flatten li a {
 }
 
 .main-section {
-	padding: 0em .5em .2em .5em;
+	padding: 0em .5em .5em .5em;
 }
 
 hr {
